feat: added role handling